# chess-algorithm-development

./: .gitignore  Cargo.toml  output1.txt
src/: io.rs  main.rs
src/algorithms/: basic.rs  basic_no_stalemate.rs  draw_checker.rs  eval.rs  mod.rs  random_move.rs  the_algorithm.rs  utils.rs  v0_random_move.rs  v1_basic.rs  v2_basic_no_stalemate.rs  v3_variable_depth.rs
src/common/: algorithm.rs  constants.rs  mod.rs  utils.rs
src/modules/: alpha_beta.rs  analyze.rs  mod.rs  search_extensions.rs  skip_bad_moves.rs  transposition_table.rs
src/pitter/: logic.rs  mod.rs  ui.rs
