[package]
name = "chess-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.11.2", features = ["dynamic_linking"] }
chess = "3.2.0"
rand = "0.8.5"
rustc-hash = "1.1.0"
tokio = { version = "1.34.0", features = ["full"] }
# ordered_float = "4.1.1"
